CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET (CMAKE_VERBOSE_MAKEFILE OFF)

PROJECT (dual-boot-test)
ENABLE_LANGUAGE (ASM-ATT)

INCLUDE_DIRECTORIES("src/")
INCLUDE_DIRECTORIES("deps/etl/include/")

SET (MQTT_PACKET_SRC "deps/paho.mqtt.embedded-c/MQTTPacket/src")
INCLUDE_DIRECTORIES("mqtt-x86" ${MQTT_PACKET_SRC})

SET (LIB_STATE_MACHINE_ROOT "deps/libstatemachine")
INCLUDE_DIRECTORIES ("${LIB_STATE_MACHINE_ROOT}/src")

SET (LIB_MICRO_ROOT "deps/libmicro")
INCLUDE_DIRECTORIES ("${LIB_MICRO_ROOT}/src")

SET (LIB_COMMS_ROOT "deps/libcomms")
INCLUDE_DIRECTORIES ("${LIB_COMMS_ROOT}/src")

#add_subdirectory(deps/fmt EXCLUDE_FROM_ALL)
#INCLUDE_DIRECTORIES ("deps/fmt/include")

include_directories (deps/GSL/include)

# +-----------------+
# | My code         |
# +-----------------+
ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf
    "src/main.cc"

    "${LIB_MICRO_ROOT}/src/Blinker.h"
    "${LIB_MICRO_ROOT}/src/ErrorHandler.h"
    "${LIB_MICRO_ROOT}/src/ErrorHandler.c"
    "${LIB_MICRO_ROOT}/src/Hal.h"
    "${LIB_MICRO_ROOT}/src/HalStm32L4.h"
    "${LIB_MICRO_ROOT}/src/TimerF.cc"
    "${LIB_MICRO_ROOT}/src/Timer.h"
    "${LIB_MICRO_ROOT}/src/Debug.cc"
    "${LIB_MICRO_ROOT}/src/Debug.h"
    "${LIB_MICRO_ROOT}/src/debug.h"
    "${LIB_MICRO_ROOT}/src/Gpio.h"
    "${LIB_MICRO_ROOT}/src/GpioL.h"
    "${LIB_MICRO_ROOT}/src/GpioL.cc"
    "${LIB_MICRO_ROOT}/src/GpioL4.cc"
    "${LIB_MICRO_ROOT}/src/Usart.h"
    "${LIB_MICRO_ROOT}/src/UsartL.cc"
    "${LIB_MICRO_ROOT}/src/UsartL.h"
    "${LIB_MICRO_ROOT}/src/UsartL4.cc"
    "${LIB_MICRO_ROOT}/src/Spi.h"
    "${LIB_MICRO_ROOT}/src/SpiF.cc"
    "${LIB_MICRO_ROOT}/src/SpiF.h"
    "${LIB_MICRO_ROOT}/src/SpiF4.cc"
    "${LIB_MICRO_ROOT}/src/collection/Queue.h"
    "${LIB_MICRO_ROOT}/src/collection/CircularBuffer.h"
    "${LIB_MICRO_ROOT}/src/collection/CircularBuffer.cc"
    "${LIB_MICRO_ROOT}/src/character/ICharacterSink.h"
    "${LIB_MICRO_ROOT}/src/character/BufferedCharacterSink.h"
    "${LIB_MICRO_ROOT}/src/character/LineSink.h"
    "${LIB_MICRO_ROOT}/src/character/FixedLineSink.h"

    "${LIB_COMMS_ROOT}/src/ICommunicationInterface.h"
    "${LIB_COMMS_ROOT}/src/AbstractModem.h"
    "${LIB_COMMS_ROOT}/src/BinaryEvent.h"
    "${LIB_COMMS_ROOT}/src/UsartAction.h"
#    "${LIB_COMMS_ROOT}/src/mc60Modem/Mc60Modem.cc"
#    "${LIB_COMMS_ROOT}/src/mc60Modem/Mc60Modem.h"
#    "${LIB_COMMS_ROOT}/src/mc60Modem/SendNetworkAction.h"
#    "${LIB_COMMS_ROOT}/src/mc60Modem/SendNetworkAction.cc"
#    "${LIB_COMMS_ROOT}/src/mc60Modem/QueryAckAction.h"
#    "${LIB_COMMS_ROOT}/src/mc60Modem/QueryRecvAction.h"
#    "${LIB_COMMS_ROOT}/src/modem/StatusPinCondition.h"
#    "${LIB_COMMS_ROOT}/src/modem/StatusPinCondition.cc"
#    "${LIB_COMMS_ROOT}/src/modem/PwrKeyAction.h"
#    "${LIB_COMMS_ROOT}/src/modem/PwrKeyAction.cc"
#    "${LIB_COMMS_ROOT}/src/modem/GsmCommandAction.h"
#    "${LIB_COMMS_ROOT}/src/modem/GsmCommandAction.cc"
    "${LIB_COMMS_ROOT}/src/esp8266/Esp8266.h"
    "${LIB_COMMS_ROOT}/src/esp8266/Esp8266.cc"
    "${LIB_COMMS_ROOT}/src/esp8266/SendNetworkAction.h"
    "${LIB_COMMS_ROOT}/src/esp8266/SendNetworkAction.cc"
    "${LIB_COMMS_ROOT}/src/esp8266/Types.h"
    "${LIB_COMMS_ROOT}/src/AtCommandAction.cc"
    "${LIB_COMMS_ROOT}/src/AtCommandAction.h"

    "${LIB_STATE_MACHINE_ROOT}/src/Action.h"
    "${LIB_STATE_MACHINE_ROOT}/src/DelayAction.h"
    "${LIB_STATE_MACHINE_ROOT}/src/State.h"
    "${LIB_STATE_MACHINE_ROOT}/src/StateMachine.h"
    "${LIB_STATE_MACHINE_ROOT}/src/TimeCounter.h"
    "${LIB_STATE_MACHINE_ROOT}/src/Transition.h"
    "${LIB_STATE_MACHINE_ROOT}/src/Condition.h"
    "${LIB_STATE_MACHINE_ROOT}/src/StringCondition.h"
    "${LIB_STATE_MACHINE_ROOT}/src/TimePassedCondition.h"
    "${LIB_STATE_MACHINE_ROOT}/src/BeginsWithCondition.h"
    "${LIB_STATE_MACHINE_ROOT}/src/LikeCondition.h"
    "${LIB_STATE_MACHINE_ROOT}/src/NotCondition.h"
    "${LIB_STATE_MACHINE_ROOT}/src/BoolCondition.h"
    "${LIB_STATE_MACHINE_ROOT}/src/BoolAction.h"
    "${LIB_STATE_MACHINE_ROOT}/src/IntegerAction.h"
    "${LIB_STATE_MACHINE_ROOT}/src/IntegerCondition.h"
    "${LIB_STATE_MACHINE_ROOT}/src/OrCondition.h"
    "${LIB_STATE_MACHINE_ROOT}/src/AndCondition.h"
    "${LIB_STATE_MACHINE_ROOT}/src/StateChangeAction.h"
    "${LIB_STATE_MACHINE_ROOT}/src/StateCondition.h"

    "${MQTT_PACKET_SRC}/MQTTConnectClient.c"
    "${MQTT_PACKET_SRC}/MQTTConnect.h"
    "${MQTT_PACKET_SRC}/MQTTConnectServer.c"
    "${MQTT_PACKET_SRC}/MQTTDeserializePublish.c"
    "${MQTT_PACKET_SRC}/MQTTFormat.c"
    "${MQTT_PACKET_SRC}/MQTTFormat.h"
    "${MQTT_PACKET_SRC}/MQTTPacket.c"
    "${MQTT_PACKET_SRC}/MQTTPacket.h"
    "${MQTT_PACKET_SRC}/MQTTPublish.h"
    "${MQTT_PACKET_SRC}/MQTTSerializePublish.c"
    "${MQTT_PACKET_SRC}/MQTTSubscribeClient.c"
    "${MQTT_PACKET_SRC}/MQTTSubscribe.h"
    "${MQTT_PACKET_SRC}/MQTTSubscribeServer.c"
    "${MQTT_PACKET_SRC}/MQTTUnsubscribeClient.c"
    "${MQTT_PACKET_SRC}/MQTTUnsubscribe.h"
    "${MQTT_PACKET_SRC}/MQTTUnsubscribeServer.c"
    "${MQTT_PACKET_SRC}/StackTrace.h"
)

# +--------------+
# | STM Cube     |
# +--------------+
# Workaround : rozdzielenie kodu C++ i C powoduje, że QTCreator dobrze parsuje nagłówki C++. Bez tego podziału QTCreator się gubi.
add_library ("stm" STATIC
        "${STARTUP_CODE}"
        "src/stm32l4xx_it.c"
        "src/stm32l4xx_hal_conf.h"
        "src/system_stm32l4xx.c"

        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_adc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_adc_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_can.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_comp.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_cortex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_crc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_crc_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_cryp.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_cryp_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dac.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dac_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dcmi.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dfsdm.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dfsdm_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma2d.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dsi.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_exti.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_firewall.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash_ramfunc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_gfxmmu.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_gpio.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_hash.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_hash_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_hcd.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_i2c.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_i2c_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_irda.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_iwdg.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_lcd.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_lptim.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_ltdc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_ltdc_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_msp_template.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_nand.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_nor.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_opamp.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_opamp_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_ospi.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pcd.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pcd_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pwr.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pwr_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_qspi.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rcc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rcc_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rng.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rtc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rtc_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sai.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sai_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sd.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sd_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_smartcard.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_smartcard_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_smbus.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_spi.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_spi_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sram.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_swpmi.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_tim.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_timebase_tim_template.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_tim_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_tsc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_uart.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_uart_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_usart.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_usart_ex.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_wwdg.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_adc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_comp.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_crc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_crs.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_dac.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_dma2d.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_dma.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_exti.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_fmc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_gpio.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_i2c.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_lptim.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_lpuart.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_opamp.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_pwr.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_rcc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_rng.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_rtc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_sdmmc.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_spi.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_swpmi.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_tim.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_usart.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_usb.c"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_utils.c"

        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_adc_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_adc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_can.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_comp.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_conf_template.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_cortex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_crc_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_crc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_cryp_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_cryp.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dac_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dac.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dcmi.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_def.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dfsdm_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dfsdm.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dma2d.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dma_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dma.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dsi.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_exti.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_firewall.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_flash_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_flash.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_flash_ramfunc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gfxmmu.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_hash_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_hash.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_hcd.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_i2c_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_i2c.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_irda_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_irda.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_iwdg.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_lcd.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_lptim.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_ltdc_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_ltdc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_nand.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_nor.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_opamp_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_opamp.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_ospi.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pcd_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pcd.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pwr_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pwr.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_qspi.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rcc_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rcc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rng.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rtc_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rtc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sai_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sai.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sd_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sd.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_smartcard_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_smartcard.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_smbus.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_spi_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_spi.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sram.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_swpmi.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_tim_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_tim.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_tsc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_uart_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_uart.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_usart_ex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_usart.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_wwdg.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_adc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_bus.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_comp.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_cortex.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_crc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_crs.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dac.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dma2d.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dma.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dmamux.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_exti.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_fmc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_gpio.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_i2c.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_iwdg.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_lptim.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_lpuart.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_opamp.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_pwr.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_rcc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_rng.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_rtc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_sdmmc.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_spi.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_swpmi.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_system.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_tim.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_usart.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_usb.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_utils.h"
        "${CUBE_ROOT}/Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_wwdg.h"

)

TARGET_LINK_LIBRARIES (${CMAKE_PROJECT_NAME}.elf -Wl,--whole-archive stm -Wl,--no-whole-archive)

FIND_PROGRAM (OPENOCD openocd HINTS "/home/iwasz/local/bin")
ADD_CUSTOM_TARGET("upload" DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${OPENOCD} -f /home/iwasz/local/share/openocd/scripts/interface/stlink-v2-1.cfg -f /home/iwasz/local/share/openocd/scripts/target/stm32l4x.cfg -c 'program ${CMAKE_PROJECT_NAME}.elf verify reset exit')
ADD_CUSTOM_TARGET("debug" DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${OPENOCD} -f /home/iwasz/local/share/openocd/scripts/interface/stlink-v2-1.cfg -f /home/iwasz/local/share/openocd/scripts/target/stm32l4x.cfg)

ADD_CUSTOM_TARGET(${CMAKE_PROJECT_NAME}.bin ALL DEPENDS ${CMAKE_PROJECT_NAME}.elf COMMAND ${CMAKE_OBJCOPY} -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin)
